# cg-project

./: .gitignore  Bowling.docx  CMakeLists.txt  Loader.cpp  Loader.h  Loader.hpp  Navigator.cpp  Navigator.hpp  Object.cpp  Object.hpp  Objectos.txt  OpenGL.hpp  RgbImage.cpp  Scene.cpp  Scene.h  Scene.hpp  Structs.cpp  Structs.hpp  Texture.cpp  Texture.hpp  billiardTable.cpp  billiardTable.hpp  cg_project  colors.hpp  main.cpp  main.hpp  materiais.hpp  materials.cpp  materials.hpp  object_handler.cpp  object_handler.hpp  primitives.cpp  primitives.hpp  roomWindow.cpp  roomWindow.hpp  scene.cpp  scene.hpp  spotLight.cpp  spotLight.hpp  structs.cpp  (+3 more)
